Fetch manifest icon prior to checking eligibility in InstallableManager

Previously primary icons are not fetched for web sites that do not pass
the installability tests. As a result, web sites such as
sensor-compass.appspot.com and superbowl.com, when added to home
screen, have generated icons instead of primary icons provided in their
Web manifests.

This CL makes InstallableManager to fetch manifest icon prior to
checking eligibility for PWA in InstallableManager.

BUG=702233

Review-Url: https://codereview.chromium.org/2759753002
Cr-Commit-Position: refs/heads/master@{#463134}

Former-commit-id: f7338b32ab404c8dca728c4b8dabb8b660d5b4ec